--- a/media.css
+++ b/media.css
@@ -62,7 +62,7 @@
     display: flex;
     flex-wrap: wrap;
     /* align-items: center; */
-    justify-content: center;
+    /* justify-content: center; */
   }
   .javascript {
     margin-left: 0.6rem;
@@ -88,7 +88,8 @@
   .logos2 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
+    /* align-items: center; */
   }
   .supabase {
     margin-left: 1rem;
@@ -99,7 +100,7 @@
   .hosting {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
   }
   .github {
     margin-left: 0.6rem;
@@ -122,7 +123,7 @@
   .Tools {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
   }
   .Visual {
     margin-left: 0.6rem;
@@ -134,7 +135,7 @@
     margin-left: 1rem;
   }
   .Figma {
-    margin-left: 5rem;
+    margin-left: 1rem;
   }
   .Photoshop {
     margin-left: 1rem;
@@ -151,6 +152,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 0rem;
   }
   .Project1 {
     margin-left: 3rem;
@@ -279,8 +281,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    /* align-items: center; */
     gap: 1rem;
     margin-top: 5rem;
+    margin-left: 0rem;
   }
   .javascript {
     margin-left: 0.6rem;
@@ -308,6 +312,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
+    margin-left: 0rem;
   }
   .supabase {
     margin-left: 1rem;
@@ -319,6 +324,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-left: 0rem;
   }
   .github {
     margin-left: 0.6rem;
@@ -339,10 +345,11 @@
     margin-left: 1rem;
   }
   .Tools {
-    /* display: flex; */
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
+    margin-left: 0rem;
   }
   .Visual {
     margin-left: 0.6rem;
@@ -371,6 +378,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 0rem;
   }
   .Project1 {
     margin-left: 3rem;
@@ -513,6 +521,7 @@
     flex-wrap: wrap;
     /* align-items: center; */
     justify-content: center;
+    margin-left: 0rem;
   }
   .javascript {
     margin-left: 0.6rem;
@@ -539,6 +548,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-left: 0rem;
   }
   .supabase {
     margin-left: 1rem;
@@ -550,6 +560,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-left: 0rem;
   }
   .github {
     margin-left: 0.6rem;
@@ -570,10 +581,11 @@
     margin-left: 1rem;
   }
   .Tools {
-    /* display: flex; */
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin-left: 0rem;
   }
   .Visual {
     margin-left: 0.6rem;
@@ -690,6 +702,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-left: 0rem;
   }
   .Project1 {
     margin-left: 0rem;
@@ -727,6 +740,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
+    margin-left: 0rem;
   }
   .javascript {
     margin-left: 0.6rem;
@@ -754,6 +768,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
+    margin-left: 0rem;
   }
   .supabase {
     margin-left: 1rem;
@@ -766,6 +781,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
+    margin-left: 0rem;
   }
   .github {
     margin-left: 0.6rem;
@@ -791,6 +807,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    margin-left: 0rem;
   }
   .Visual {
     margin-left: 0.6rem;
